Implemented HCE with custom commands. Cosmetics. Added docs.

--- a/emulator/android/app/src/main/res/values/strings.xml
+++ b/emulator/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NFCCardEmulator</string>
+    <string name="servicedesc">NFC Card Emulator</string>
+    <string name="aiddescription">AID for NFC Card Emulator</string>
 </resources>
